--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,6 +1,39 @@
 .Sidebar {
-    height: 100vw;
-    width: 300px;
+    display: flex;
+    height: 100vh;
+    width: 120px;
+    flex-flow: column;
     background: var(--theme-margin);
     border: var(--theme-other1);
   }
+
+.SidebarList {
+  display: flex;
+  flex: 1 1 auto;
+  flex-flow: column;
+  width: 100%;
+}
+
+.SidebarList .row {
+  display: flex;
+  /* align-items: left; */
+  flex: 1 1 auto;
+  justify-items: center;
+  background-color: var(--theme-other2);
+}
+
+.row #icon {
+  flex: 30%;
+  display: grid;
+  place-items: center;
+}
+
+.row #title {
+  flex: 70%;
+  display: grid;
+  place-items: center;
+}
+
+.spacer {
+  height: 20%;
+}
