--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -8,17 +8,22 @@
   }
 
 .SidebarList {
-  display: flex;
-  flex: 1 1 auto;
-  flex-flow: column;
+  height: auto;
+  padding: 0;
   width: 100%;
+  margin-block: 0;
 }
 
 .SidebarList .row {
+  width: 100%;
+  height: 50px;
+  /* border: 1px solid black; */
+  list-style-type: none;
+  margin: 0;
   display: flex;
-  /* align-items: left; */
-  flex: 1 1 auto;
-  justify-items: center;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: var(--theme-other2);
 }
 
@@ -32,8 +37,10 @@
   flex: 70%;
   display: grid;
   place-items: center;
-}
+} 
 
 .spacer {
-  height: 20%;
+  /* height: 20%; */
+  flex: auto;
+  flex-direction: column;
 }
