--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,38 @@
 /* https://medium.com/swlh/setting-up-light-and-dark-mode-in-a-react-application-just-with-styles-7790dea22aed */
 
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: var(--theme-page-background);
   color: var(--theme-page-text);
 }
 
-.Content {
-  width: 100% - 100px;
-  height: 100%;
-}
-
 .Row {
   display: flex;
-  width: 100%;
+  height: 100%;
+  margin: 0;
+  /* width: 100%; */
+  /* box-sizing: border-box; */
+}
 
+.Loading {
+  width: 30px;
+  height: 30px;
+  animation: Loading 0.7s linear infinite;
+}
+
+@keyframes Loading {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 
 body {
   margin: 0;
   padding: 0;
+  /* display: grid;
+  grid-template-columns: min-content 1fr; */
 }
 
 
