--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,8 +1,14 @@
 .Sidebar {
+  /* for sticking to the top and allowing scrolling */
+    /* position: -webkit-sticky;
+    position: sticky; */
+    position: relative;
+    top: 0;
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
     width: 120px;
     flex-flow: column;
+    /* grid-column: 1/2; */
     background: var(--theme-margin);
     border: var(--theme-other1);
   }
