--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -1,9 +1,38 @@
+.Taskview {
+    position: relative;
+    float: right;
+    /* grid-column: 2/2; */
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+  }
+
+
+.Content {
+    height: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    flex-flow: column;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+
 
 .Header{
-    height: 20px;
+    /* height: 50px; */
+    /* For Sticking to the top */
     width: 100%;
-}
-.Taskview{
-    height: 100vh -20px;
+    position: sticky;
+    top: 0;
+    /* End */
+    display: flex;
     width: 100%;
+    background-color: var(--theme-other1);
+    padding: 32px;
+    justify-content: left;
+    vertical-align: middle;
+    box-sizing: border-box;
 }
