Updated theme colours

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,30 +1,21 @@
 .light {
-  --theme-color: #a80000;
-  --theme-page-background: #fff;
-  --theme-page-text: #111;
-  --theme-body: #c1e0f7;
-  --theme-toggleBorder: #97f9f9;
-  --theme-background: #a4def9;
-  --theme-text: #393b44;
-  --theme-margin: #6d597aff;
-  --theme-other1: #b56576ff;
-  --theme-other2: #e56b6fff;
-  --theme-other3: #eaac8bff;
+  --theme-background: #FFFFFF; /* Main Background */
+  --theme-text: #4A4A4A; /* text */
+  --theme-text-notselected: #A5A5A5; /* not selected text*/ 
+  --theme-text-clickable: #4273DD; /* clickable text */
+  --theme-margin: #F0F0F0; /* Navbar background */
+  --theme-foreground: #EBEBEB; /* sidebar foreground */
+  --theme-modal: #FFFFFF; /* Modal */
+  /* dulled? BFBFBF */
 }
 
 /* https://coolors.co/006466-065a60-0b525b-144552-1b3a4b-212f45-272640-312244-3e1f47-4d194d */
 .dark {
-  --theme-color: #0000a8;
-  --theme-page-background: #111;
-  --theme-page-text: #fff;
-  --theme-body: #272640;
-  --theme-text: #FFF;
-  --theme-toggleBorder: #006466;
-  --theme-background: #272640;
-  --theme-margin: #0b525b;
-  --theme-other1: #3e1f47;
-  --theme-other2: #312244;
-  --theme-other3: #212f45;
+  --theme-background: #212224; /* Main Background */
+  --theme-text: #ffffff; /* text */
+  --theme-text-notselected: #6C6C6C; /* not selected text*/ 
+  --theme-text-clickable: #F0F0F0; /* clickable text */
+  --theme-margin: #2d2d2d; /* Navbar background */
+  --theme-foreground: #5a5a5a; /* sidebar foreground */
+  --theme-modal: #3B3B3B; /* Modal */
 }
-
-
