--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,17 +1,17 @@
 .Sidebar {
   /* for sticking to the top and allowing scrolling */
-    /* position: -webkit-sticky;
+  /* position: -webkit-sticky;
     position: sticky; */
-    position: relative;
-    top: 0;
-    display: flex;
-    /* height: 100vh; */
-    width: 120px;
-    flex-flow: column;
-    /* grid-column: 1/2; */
-    background: var(--theme-margin);
-    border: var(--theme-other1);
-  }
+  position: relative;
+  top: 0;
+  display: flex;
+  /* height: 100vh; */
+  width: 120px;
+  flex-flow: column;
+  /* grid-column: 1/2; */
+  background: var(--theme-margin);
+  border: var(--theme-foreground);
+}
 
 .SidebarList {
   height: auto;
@@ -30,7 +30,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: var(--theme-other2);
+  background-color: var(--theme-foreground);
 }
 
 .row #icon {
@@ -43,7 +43,7 @@
   flex: 70%;
   display: grid;
   place-items: center;
-} 
+}
 
 .spacer {
   /* height: 20%; */
