--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,15 @@
 .App {
   width: 100%;
   height: 100%;
-  background: var(--theme-page-background);
-  color: var(--theme-page-text);
+  background: var(--theme-background);
+  color: var(--theme-text);
+  min-height: 500px;
 }
 
 .Row {
   display: flex;
   height: 100%;
   margin: 0;
-  /* width: 100%; */
-  /* box-sizing: border-box; */
 }
 
 .Loading {
@@ -31,8 +30,6 @@
 body {
   margin: 0;
   padding: 0;
-  /* display: grid;
-  grid-template-columns: min-content 1fr; */
 }
 
 
