--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -5,12 +5,10 @@
   position: relative;
   top: 0;
   display: flex;
-  /* height: 100vh; */
   width: 120px;
   flex-flow: column;
-  /* grid-column: 1/2; */
   background: var(--theme-margin);
-  border: var(--theme-foreground);
+  /* border: var(--theme-foreground); */
 }
 
 .SidebarList {
@@ -20,7 +18,16 @@
   margin-block: 0;
 }
 
-.SidebarList .row {
+.SidebarListBottom {
+  height: auto;
+  position: absolute;
+  padding: 0;
+  width: 100%;
+  bottom: 0;
+  margin-block: 0;
+}
+
+.row {
   width: 100%;
   height: 50px;
   /* border: 1px solid black; */
@@ -30,7 +37,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: var(--theme-foreground);
+  border-radius: 3pt;
+}
+
+.row:hover {
+  background-color: var(--theme-hover);
 }
 
 .row #icon {
