--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
 
 .App {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: var(--theme-background);
   color: var(--theme-text);
-  min-height: 500px;
+  min-height: 300px;
 }
 
 .Row {
