--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -3,33 +3,38 @@
   float: right;
   /* grid-column: 2/2; */
   width: 100%;
-  height: 100vh;
+  /* height: 100%; */
   display: flex;
   flex-flow: column;
+  padding-left: 30px;
+  padding-top: 10px;
 }
 
 .Content {
-  height: 500px;
+  /* height: 100%; */
   width: 100%;
   display: flex;
   justify-content: left;
   flex-flow: column;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-bottom: 20px;
 }
 
 .Header {
   /* height: 50px; */
   /* For Sticking to the top */
-  width: 100%;
+  /* width: 100%; */
   position: sticky;
   top: 0;
   /* End */
-  display: flex;
-  width: 100%;
+  /* display: flex; */
+  /* width: 100%; */
   background-color: var(--theme-foreground);
   padding: 32px;
   justify-content: left;
   vertical-align: middle;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  border-radius: 50pt;
+  margin-right: 30px;
 }
