--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -28,13 +28,16 @@
   position: sticky;
   top: 0;
   /* End */
-  /* display: flex; */
-  /* width: 100%; */
+  float: left;
   background-color: var(--theme-foreground);
   padding: 32px;
   justify-content: left;
-  vertical-align: middle;
-  /* box-sizing: border-box; */
+  justify-items: center;
   border-radius: 50pt;
   margin-right: 30px;
+  margin-bottom: 10px;
+  /* display: flex; */
+  /* width: 100%; */
+  /* vertical-align: middle; */
+  /* box-sizing: border-box; */
 }
