--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -56,3 +56,15 @@ input::placeholder{
 input {
   color: var(--theme-text);
 }
+
+.Task {
+  padding: 10px;
+  width: 90%;
+  border-width: 4px;
+  border-radius: 4px;
+  border-style: solid;
+  border-color: var(--theme-foreground);
+  margin-bottom: 5px;
+  align-items: left;
+  vertical-align: middle;
+}
