--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -19,6 +19,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   padding-bottom: 20px;
+  padding-inline-start: 0px
 }
 
 .Header {
@@ -58,13 +59,14 @@ input {
 }
 
 .Task {
+  display: flex;
+  flex-flow: row;
+  align-items:center;
   padding: 10px;
-  width: 90%;
+  width: 92%;
   border-width: 4px;
   border-radius: 4px;
   border-style: solid;
   border-color: var(--theme-foreground);
   margin-bottom: 5px;
-  align-items: left;
-  vertical-align: middle;
 }
