--- a/src/Components/Taskview/Taskview.css
+++ b/src/Components/Taskview/Taskview.css
@@ -58,15 +58,24 @@ input {
   color: var(--theme-text);
 }
 
+.Priority {
+  padding: 10px;
+  border-color: var(--theme-foreground);
+  border-width: 4px;
+  border-radius: 50px;
+  border-style: solid;
+  margin-bottom: 10px;
+}
+
 .Task {
   display: flex;
   flex-flow: row;
   align-items:center;
   padding: 10px;
   width: 92%;
-  border-width: 4px;
+  /* border-width: 4px;
   border-radius: 4px;
-  border-style: solid;
+  border-style: solid; */
   border-color: var(--theme-foreground);
   margin-bottom: 5px;
 }
