--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -27,17 +27,39 @@
   --project: #6b2770;
   --context: #2b6251;
   --hashtag: #12c8ed;
-  --B: #f3722cff;
-  --C: #f8961eff;
-  --D: #f9844aff;
-  --E: #f9c74fff;
-  --F: #90be6dff;
-  --G: #43aa8bff;
-  --H: #4d908eff;
-  --I: #577590ff;
-  --J: #277da1ff;
 }
 
 .A {
-  border-color: #f94144ff;
+  --prio-border: #f94144ff;
+}
+.B {
+  --prio-border: #f3722cff;
+}
+.C {
+  --prio-border: #f9844aff;
+}
+.D {
+  --prio-border: #f9c74fff;
+}
+.E {
+  --prio-border: #f9c74fff;
+}
+.F {
+  --prio-border: #90be6dff;
+}
+.G {
+  --prio-border: #43aa8bff;
+}
+.H {
+  --prio-border: #4d908eff;
+}
+.I {
+  --prio-border: #577590ff;
+}
+.J {
+  --prio-border: #277da1ff;
+}
+
+.None {
+  --prio-border: #c0c0c0;
 }
