--- a/src/Components/Taskview/Task.css
+++ b/src/Components/Taskview/Task.css
@@ -2,14 +2,15 @@
     display: flex;
     flex-flow: row;
     align-items:center;
-    /* padding: 10px; */
-    width: 92%;
-    /* border-width: 4px;
-    border-radius: 4px;
-    border-style: solid; */
-    border-color: var(--theme-foreground);
-    margin-bottom: 5px;
+    /* width: 92%; */
+    margin-right: 30px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid var(--theme-dimmed);
   }
+
+.true {
+    color: var(--theme-text-notselected);
+}
 
 
 div:empty { display: none }
@@ -38,6 +39,12 @@ div:empty { display: none }
 
 .Hashtag {
     background-color: var(--hashtag);
+    float: left;
+    margin: 10px;
+}
+
+.Tag {
+    background-color: var(--tag);
     float: left;
     margin: 10px;
 }
