--- a/src/Components/Modal/modal.css
+++ b/src/Components/Modal/modal.css
@@ -11,6 +11,14 @@
   opacity: 0;
   transition: all 0.3s ease-in-out;
   pointer-events: none;
+  color: var(--theme-text);
+}
+
+.modal button {
+  width: 100%;
+  height: 100%;
+  background-color: var(--theme-foreground);
+  border-radius: 5px;
 }
 
 .modal.enter-done {
@@ -27,6 +35,7 @@
   background-color: var(--theme-foreground);
   transition: all 0.3s ease-in-out;
   transform: translateY(-200px);
+  border-radius: 10px;
 }
 
 .modal.enter-done .modal-content {
@@ -34,12 +43,18 @@
 }
 
 .modal.exit .modal-content {
-  transform: translateY(-200px);
+  transform: translateY(200px);
 }
 
-.modal-header,
+/* .modal-header,
 .modal-footer {
   padding: 10px;
+} */
+
+.modal-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .modal-title {
@@ -47,7 +62,7 @@
 }
 
 .modal-body {
-  padding: 10px;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  padding: 20px;
+  /* border-top: 1px solid var(--theme-dimmed); */
+  border-bottom: 1px solid var(--theme-dimmed);
 }
